WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112226
Regression: svg background-image on <body> never renders
https://bugs.webkit.org/show_bug.cgi?id=112226
Summary
Regression: svg background-image on <body> never renders
Philip Rogers
Reported
2013-03-12 22:18:40 PDT
Created
attachment 192869
[details]
Testcase What a terrible regression! The SVG image rewrite exposed a latent bug in painting background images for <body>. SVG background images rely on this call to set their container size: fillLayer->image()->setContainerSizeForRenderer(this, fillTileSize, style()->effectiveZoom()); <body> backgrounds are special in that the body may not paint them. If the body is not the renderer that paints the background, we will set the container size with one renderer but try and fail to look it up using another. Patch forthcoming. Upstream: crbug.com/189127
Attachments
Testcase
(311 bytes, text/html)
2013-03-12 22:18 PDT
,
Philip Rogers
no flags
Details
Fix body background image geometry calculation
(6.85 KB, patch)
2013-03-12 23:13 PDT
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2013-03-12 23:13:24 PDT
Created
attachment 192871
[details]
Fix body background image geometry calculation
Stephen Chenney
Comment 2
2013-03-13 08:02:14 PDT
Comment on
attachment 192871
[details]
Fix body background image geometry calculation R=me. Good catch.
WebKit Review Bot
Comment 3
2013-03-13 10:04:12 PDT
Comment on
attachment 192871
[details]
Fix body background image geometry calculation Clearing flags on attachment: 192871 Committed
r145726
: <
http://trac.webkit.org/changeset/145726
>
WebKit Review Bot
Comment 4
2013-03-13 10:04:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug